2003-06-15  mput<root@mput.dip.jp>

	* configure.in, timidity/Makefile.am: Fix a bit to merge
	s_keishi's patch

2003-06-14  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* configure.in: Fix to fit with the addition
	* timidity/timidity.c, timidity/output.c: Fix to fit with the
	  addition
	* timidity/Makefile.am (EXTRA_timidity_SOURCES): Fix to fit with
	  the addition
	* timidity/portaudio_a.c: Add.

2003-06-14  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* timidity/timidity.c:
	  Fix noise with gauss interpolation at synthesizer modes.

2003-06-13  s_keishi <s_keishi@mutt.freemail.ne.jp>

	* configure.in, interface.h.in,
	  timidity/Makefile.am, timidity/timidity.c:
	  Fix configures to be able to compile twsyng with gcc.

2003-06-13  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/readmidi.c,
	timidity/reverb.[ch], timidity/tables.c:
	  Fix insertion effect.
	  Fix illegal-parameter handling of delay effect.
	  Strengthen delay and chorus effect.
	  Support for reverb / chorus / delay LPF in correct method.

2003-06-12  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/readmidi.c, timidity/reverb.[ch]:
	  Renew insertion effect.

2003-06-08  Saito <timidity@flashmail.com>

	* timidity/playmidi.[ch], timidity/readmidi.[ch],
	  timidity/rcp.c, timidity/timidity.c, timidity/reverb.c,
	  timidity/resample.c:
	  Fix in channel layer.
	  Change default -N to 0.

2003-06-08  URABE  <shyouhei@YahooBB218133008108.bbtec.net>

	* Makefile.am (dist-hook): Not to change msc-config.h every time
	* timidity/recache.c, timidity/resample.c, timidity/timidity.c:
	  Fix linkage of newt_coeff[][].

2003-06-06  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/tables.c:
	  Fix about sc_vol_table[] and sc_vel_table[].

2003-06-06  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/tables.[ch], timidity/timidity.c, timidity/playmidi.c:
	  recompute_amp() handles velocity/volume/expression levels